syntax = "proto3";

package proto;

option go_package = "heartbeat";

// Heartbeat represents the heartbeat message that is sent between peers
message Heartbeat {
	bytes  Payload         = 1;
	bytes  Pubkey          = 2;
	bytes  Signature       = 3;
	uint32 ShardID         = 4;
	string VersionNumber   = 5;
	string NodeDisplayName = 6;
	bytes  Pid             = 7;
}

// HeartbeatDTO is the struct used for handling DB operations for heartbeatMessageInfo struct
message HeartbeatDTO {
	int64  	MaxDurationPeerUnresponsive  = 1 ;
	int64  	MaxInactiveTime              = 2 ;
	int64  	TotalUpTime                  = 3 ;
	int64  	TotalDownTime                = 4 ;
	int64 	TimeStamp                    = 5 ;
	bool    IsActive                     = 6 ;
	uint32  ReceivedShardID              = 7 ;
	uint32  ComputedShardID              = 8 ;
	string  VersionNumber                = 9 ;
	string  NodeDisplayName              = 10;
	string  PeerType                     = 11;
	bool    IsValidator                  = 12;
	int64	LastUptimeDowntime           = 13;
	int64   GenesisTime                  = 14;
}

message DbTimeStamp {
	int64 Timestamp = 1;
}
